2003-08-08  Bharat Mediratta  <bharat@menalto.com> 1.3.5-cvs-b104

	* Fixed several small problems in the config wizard and util.php that 
	  would generate PHP warnings.

	* Added aliases for Portuguese (pt_PT) and Chinese (zh_TW) as they
	  appear in FreeBSD

2003-08-08  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b103

	* fixed bug which caused gallery not shown in chinese in *NUKE

	* Tweaked initLanguage() for better co-operation with NUKE. Charset header is not sent in *NUKE now

	* Tweaked util.php 

2003-08-07  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b102

	* Fix the +profile "*" bug once and for all.  To do this, I specified
          each profile type individually, as described on this page:
          http://www.imagemagick.org/www/utilities.html#details-profile

2003-08-07  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b101

	* Added traditional chinese/taiwan (zh_TW)

	* Moved mode3 language selectbox from bottom to top (only in albums.php)
	
	* Tweaked mode3 language selectbox that it only shows lanuages defined in nls.php

	* Tweaked mode3 code for better co-operation with NUKE

2003-08-06  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b100

	* fixed alignment bug, which caused gallery to render site incorrect

	* removed alignment() and use $gallery->align

2003-08-05  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b99

	* synced all languages
	
	* switched back from nb_NO to no_NO

	* updated german translation

2003-08-05  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b98
	
	* added text alignment for Hebrew.  Was in original multilanguage 
	  branch.  Only used in albums.php (so far).

2003-08-05  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b97
	
	* Code tweaked to reduce warnings in setup when error_reporting(E_ALL) 
	  is used

2003-08-05  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b96

	* Removed just introduced bug where locale alternative would not 
	  be saved if there was only one alternative.
