@@ -1,3 +1,7 @@
+2003-08-08  Bharat Mediratta  <bharat@menalto.com> 1.3.5-cvs-b105
+
+	* Cleaned up warnings and minor errors in the setup diagnostics
+
 2003-08-08  Bharat Mediratta  <bharat@menalto.com> 1.3.5-cvs-b104
 
 	* Fixed several small problems in the config wizard and util.php that 
